--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@prisma/client": "^5.14.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
